--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
     <div id="root"></div>
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
+    <script src="%PUBLIC_URL%/customjs.js"></script>
   </body>
 </html>
